# PEFT-Customized

./: pyproject.toml
src/peft/: config.py  helpers.py  mixed_model.py  peft_model.py
src/peft/tuners/: lycoris_utils.py  tuners_utils.py
src/peft/tuners/adalora/: __init__.py  bnb.py  config.py  layer.py  model.py
src/peft/tuners/adaption_prompt/: __init__.py  config.py  model.py
src/peft/tuners/boft/: __init__.py  config.py  layer.py  model.py
src/peft/tuners/bone/: __init__.py  config.py  layer.py  model.py
src/peft/tuners/cpt/: __init__.py  config.py  model.py
src/peft/tuners/fourierft/: __init__.py  config.py  layer.py  model.py
src/peft/tuners/hra/: __init__.py  (+3 more)
src/peft/utils/: hotswap.py  loftq_utils.py  other.py  peft_types.py  save_and_load.py
tests/: run_compiled_diffusion_model_hotswap.py  run_compiled_model_hotswap.py  test_adaption_prompt.py  test_auto.py  test_boft.py  test_common_gpu.py  test_config.py  test_cpt.py  test_custom_models.py  test_decoder_models.py  test_encoder_decoder_models.py  test_feature_extraction_models.py  test_gptqmodel.py  test_gpu_examples.py  test_helpers.py  test_hub_features.py  test_incremental_pca.py  test_initialization.py  test_integrations.py  test_lora_megatron.py  test_loraplus.py  test_low_level_api.py  test_mapping.py  test_mixed.py  test_multitask_prompt_tuning.py  test_other.py  test_poly.py  test_stablediffusion.py  test_torch_compile.py  test_tuners_utils.py  test_vblora.py  test_vera.py  test_vision_models.py  test_xlora.py  testing_common.py  testing_utils.py
tests/regression/: test_regression.py
(+66 files in other folders)
