[project]
name = "peft-customized"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "diffusers>=0.32.2",
    "parameterized>=0.9.0",
    "torch>=2.6.0",
    "torchao>=0.8.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
